--- a/Data_Structure_Code.ipynb
+++ b/Data_Structure_Code.ipynb
@@ -6,7 +6,7 @@
       "name": "Data Structure Code.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN3OTgCC8vwKbbR4FtSl2Vn",
+      "authorship_tag": "ABX9TyOdRs7I46m+B58RFXqER/Co",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -138,7 +138,7 @@
         "id": "jBExMYThC_cQ",
         "outputId": "24d77a11-ed5b-49df-960e-f68c2ec1c1d5"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -202,7 +202,7 @@
         "id": "MPZa9RgCHJBK",
         "outputId": "4e663420-4eda-41b1-913b-fdd8201c1ee7"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,6 +214,77 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "线性表 *二分查找* "
+      ],
+      "metadata": {
+        "id": "yZ10PFfbOIsj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#include <stdio.h>\n",
+        "#include <stdlib.h>\n",
+        "\n",
+        "#define MAXSIZE 10\n",
+        "#define NotFound 0\n",
+        "typedef int ElementType;\n",
+        "\n",
+        "typedef int Position;\n",
+        "typedef struct LNode *List;\n",
+        "struct LNode {\n",
+        "    ElementType Data[MAXSIZE];\n",
+        "    Position Last; /* 保存线性表中最后一个元素的位置 */\n",
+        "};\n",
+        "\n",
+        "List ReadInput(); /* 裁判实现，细节不表。元素从下标1开始存储 */\n",
+        "Position BinarySearch( List L, ElementType X );\n",
+        "\n",
+        "int main()\n",
+        "{\n",
+        "    List L;\n",
+        "    ElementType X;\n",
+        "    Position P;\n",
+        "\n",
+        "    L = ReadInput();\n",
+        "    scanf(\"%d\", &X);\n",
+        "    P = BinarySearch( L, X );\n",
+        "    printf(\"%d\\n\", P);\n",
+        "\n",
+        "    return 0;\n",
+        "}\n",
+        "\n",
+        "/* 下面的函数是我的程序 */\n",
+        "# 可以参考博客 https://blog.csdn.net/qq_45978890/article/details/116094046\n",
+        "\n",
+        "Position BinarySearch( List L, ElementType X ){\n",
+        "    int left = 0;\n",
+        "    int right = L->Last;\n",
+        "    int middle = 0;\n",
+        "    while(left <= right){\n",
+        "        middle = left + ((right - left) / 2);\n",
+        "        if(L->Data[middle] > X){\n",
+        "            right = middle - 1;\n",
+        "        }\n",
+        "        else if(L->Data[middle] < X){\n",
+        "            left = middle + 1;\n",
+        "        }\n",
+        "        else{\n",
+        "            return middle;\n",
+        "        }\n",
+        "    }\n",
+        "    return NotFound;\n",
+        "}\n"
+      ],
+      "metadata": {
+        "id": "j9zATj6NOQhH"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
