--- a/Data_Structure_Code.ipynb
+++ b/Data_Structure_Code.ipynb
@@ -6,7 +6,7 @@
       "name": "Data Structure Code.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOdRs7I46m+B58RFXqER/Co",
+      "authorship_tag": "ABX9TyNIN+kT5mcSdLCYy1ZvqHtp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -282,6 +282,277 @@
       ],
       "metadata": {
         "id": "j9zATj6NOQhH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "下面是两个有序链表的合并（C语言）"
+      ],
+      "metadata": {
+        "id": "UdAvZN1jVc8o"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#include <stdio.h>\n",
+        "#include <stdlib.h>\n",
+        "\n",
+        "typedef int ElementType;\n",
+        "typedef struct Node *PtrToNode;\n",
+        "struct Node {\n",
+        "    ElementType Data;\n",
+        "    PtrToNode   Next;\n",
+        "};\n",
+        "typedef PtrToNode List;\n",
+        "\n",
+        "List Read(); /* 细节在此不表 */\n",
+        "void Print( List L ); /* 细节在此不表；空链表将输出NULL */\n",
+        "\n",
+        "List Merge( List L1, List L2 );\n",
+        "\n",
+        "int main()\n",
+        "{\n",
+        "    List L1, L2, L;\n",
+        "    L1 = Read();\n",
+        "    L2 = Read();\n",
+        "    L = Merge(L1, L2);\n",
+        "    Print(L);\n",
+        "    Print(L1);\n",
+        "    Print(L2);\n",
+        "    return 0;\n",
+        "}\n",
+        "\n",
+        "/* 你的代码将被嵌在这里 */\n",
+        "List Merge( List L1, List L2 ){\n",
+        "    List l1,l2,l,L;\n",
+        "    l1 = L1->Next;   // 头结点\n",
+        "    l2 = L2->Next;\n",
+        "    l = (List)malloc(sizeof(List));\n",
+        "    L = l;\n",
+        "    \n",
+        "    while(l1 && l2){\n",
+        "        if(l1->Data > l2->Data){\n",
+        "            L->Next = l2;\n",
+        "            L = l2;\n",
+        "            l2 = l2->Next;\n",
+        "        }\n",
+        "        else{\n",
+        "            L->Next = l1;\n",
+        "            L = l1;\n",
+        "            l1 = l1->Next;\n",
+        "        }\n",
+        "    }\n",
+        "    L->Next = l1 ? l1 : l2;\n",
+        "    L1->Next = NULL;\n",
+        "    L2->Next = NULL;\n",
+        "    return l;\n",
+        "}\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "BVxKRvYcVcjm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "typedef structure Node *PtrToNode; // 定义新的数据类型，它是指向Node结构体的指针，这里可以理解成*PtrToNode就是指的Node，而\n",
+        "// *是取指针指向的值，那么可以理解，PtrToNode是一个指针变量。\n",
+        "typedef PtrToNode List; //定义了一个链表，其存储的数据格式是Node结构体，名字是List\n"
+      ],
+      "metadata": {
+        "id": "iGJBDjVDTRRc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "str1 = input()\n",
+        "str1_list = str1.split(\" \")\n",
+        "num_list1 = [int(str1_list[i]) for i in range(len(str1_list))]\n",
+        "\n",
+        "str2 = input()\n",
+        "str2_list = str2.split(\" \")\n",
+        "num_list2 = [int(str2_list[i]) for i in range(len(str2_list))]\n",
+        "\n",
+        "def Poly(num_list1, num_list2):\n",
+        "  mul_list = []\n",
+        "  sum_list = []\n",
+        "  for i in num_list1:\n",
+        "    \n"
+      ],
+      "metadata": {
+        "id": "UVheD7mJj1Uk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#include <stdio.h>\n",
+        "#include <stdlib.h>\n",
+        "\n",
+        "typedef struct PolyNode *Polynomial;\n",
+        "struct PolyNode {\n",
+        "    int coef;\n",
+        "    int expon;\n",
+        "    Polynomial link;\n",
+        "};\n",
+        "\n",
+        "Polynomial ReadPoly();\n",
+        "void Attach(int c, int e, Polynomial *pRear);\n",
+        "Polynomial Add(Polynomial P1, Polynomial P2);\n",
+        "Polynomial Mult(Polynomial P1, Polynomial P2);\n",
+        "void PrintPoly(Polynomial P);\n",
+        "\n",
+        "\n",
+        "int main()\n",
+        "{\n",
+        "    Polynomial P1, P2, PP, PS;\n",
+        "    P1 = ReadPoly();\n",
+        "    P2 = ReadPoly();\n",
+        "    PP = Mult(P1, P2);\n",
+        "    PrintPoly(PP);\n",
+        "    PS = Add(P1, P2);\n",
+        "    PrintPoly(PS);\n",
+        "}\n",
+        "\n",
+        "Polynomial ReadPoly(){\n",
+        "    Polynomial P,Rear,t;\n",
+        "    int c,e,N;\n",
+        "    scanf(\"%d\", &N);\n",
+        "    \n",
+        "    P = (Polynomial)malloc(sizeof(struct PolyNode));\n",
+        "    P->link = NULL;\n",
+        "    Rear = P;\n",
+        "    \n",
+        "    while(N--){\n",
+        "        scanf(\"%d %d\", &c, &e);\n",
+        "        Attach(c,e,&Rear);\n",
+        "    }\n",
+        "    t = P; P = P->link; free(t);  // 去掉头结点\n",
+        "    return P;\n",
+        "}\n",
+        "\n",
+        "void Attach(int c, int e, Polynomial *pRear){\n",
+        "    Polynomial P;\n",
+        "    P = (Polynomial)malloc(sizeof(struct PolyNode));\n",
+        "    P->coef = c;\n",
+        "    P->expon = e;\n",
+        "    P->link = NULL;\n",
+        "    (*pRear)->link = P;\n",
+        "    *pRear = P;\n",
+        "}\n",
+        "\n",
+        "Polynomial Add(Polynomial P1, Polynomial P2){\n",
+        "    Polynomial t1, t2, P, Rear,t;\n",
+        "    t1 = P1; t2 = P2;\n",
+        "    P = (Polynomial)malloc(sizeof(struct PolyNode)); \n",
+        "    P->link = NULL;\n",
+        "    Rear = P;\n",
+        "    \n",
+        "    while(t1 && t2){\n",
+        "        if(t1->expon == t2->expon){\n",
+        "            Attach(t1->coef+t2->coef, t1->expon, &Rear);\n",
+        "            t1->link = t1;\n",
+        "            t2->link = t2;\n",
+        "        }\n",
+        "        else if(t1->expon > t2->expon){\n",
+        "           Attach(t1->coef, t1->expon, &Rear);\n",
+        "           t1->link = t1;\n",
+        "        }\n",
+        "        else{\n",
+        "            Attach(t2->coef, t2->expon, &Rear);\n",
+        "            t2->link = t2;\n",
+        "        }\n",
+        "    }\n",
+        "    while(t1){\n",
+        "        Rear->link = t1;\n",
+        "    }\n",
+        "    while(t2){\n",
+        "        Rear->link = t2;\n",
+        "    }\n",
+        "    t = P; P = P->link; free(t);  // 去掉头结点\n",
+        "    return P;\n",
+        "}\n",
+        "\n",
+        "Polynomial Mult(Polynomial P1, Polynomial P2){\n",
+        "    Polynomial P, Rear, t1, t2, t;\n",
+        "    int c,e;\n",
+        "    if(!P1||!P2) return NULL;\n",
+        "    t1 = P1; t2 = P2;\n",
+        "    P = (Polynomial)malloc(sizeof(struct PolyNode));\n",
+        "    P->link = NULL;\n",
+        "    Rear = P;\n",
+        "    while(t2){\n",
+        "        Attach(t1->coef*t2->coef, t1->expon+t2->expon,&Rear);\n",
+        "        t2 = t2->link;\n",
+        "    }\n",
+        "    t1 = t1->link;\n",
+        "    while(t1){\n",
+        "        t2 = P2; \n",
+        "        Rear=P;\n",
+        "        while(t2){\n",
+        "            e = t1->expon + t2->expon;\n",
+        "            c = t1->coef*t2->coef;\n",
+        "            while(Rear->link && Rear->link->expon>e){\n",
+        "                Rear = Rear->link;\n",
+        "            }\n",
+        "            if(Rear->link && Rear->link->expon == e){\n",
+        "                if (Rear->link->coef + c){\n",
+        "                    Rear->link->coef+=c;\n",
+        "                }\n",
+        "                else{\n",
+        "                    // 删掉0节点\n",
+        "                    t = Rear->link;\n",
+        "                    Rear->link = t->link;\n",
+        "                    free(t);\n",
+        "                }\n",
+        "            }\n",
+        "            else{  // 把结果插入链表里\n",
+        "                t = (Polynomial)malloc(sizeof(struct PolyNode));\n",
+        "                t->coef = c;\n",
+        "                t->expon = e;\n",
+        "                t->link = Rear->link;\n",
+        "                Rear->link = t;\n",
+        "                Rear = Rear->link;\n",
+        "            }\n",
+        "            t2 = t2->link;\n",
+        "        }\n",
+        "        t1 = t1->link;\n",
+        "    }\n",
+        "    t2 = P; P = P->link; free(t2);\n",
+        "    return P;\n",
+        "}\n",
+        "\n",
+        "void PrintPoly(Polynomial P){\n",
+        "    int flag = 0;\n",
+        "    if(!P){printf(\"0 0\\n\");return;}\n",
+        "    \n",
+        "    while(P){\n",
+        "        if(!flag){\n",
+        "            flag = 1;\n",
+        "        }\n",
+        "        else{\n",
+        "            printf(\" \");\n",
+        "        }\n",
+        "        printf(\"%d %d\",P->coef, P->expon);\n",
+        "        P = P->link;\n",
+        "    }\n",
+        "    printf(\"\\n\");\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "sHpjAqG2Bs86"
       },
       "execution_count": null,
       "outputs": []
