--- a/Data_Structure_Code.ipynb
+++ b/Data_Structure_Code.ipynb
@@ -6,7 +6,7 @@
       "name": "Data Structure Code.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNIN+kT5mcSdLCYy1ZvqHtp",
+      "authorship_tag": "ABX9TyMheFS2Bm8bud7KuprF9wvv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -373,27 +373,13 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "str1 = input()\n",
-        "str1_list = str1.split(\" \")\n",
-        "num_list1 = [int(str1_list[i]) for i in range(len(str1_list))]\n",
-        "\n",
-        "str2 = input()\n",
-        "str2_list = str2.split(\" \")\n",
-        "num_list2 = [int(str2_list[i]) for i in range(len(str2_list))]\n",
-        "\n",
-        "def Poly(num_list1, num_list2):\n",
-        "  mul_list = []\n",
-        "  sum_list = []\n",
-        "  for i in num_list1:\n",
-        "    \n"
+        "以下是一元多项式的乘法与加法运算"
       ],
       "metadata": {
-        "id": "UVheD7mJj1Uk"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "BOxRNhPdIS6U"
+      }
     },
     {
       "cell_type": "code",
@@ -408,41 +394,6 @@
         "    Polynomial link;\n",
         "};\n",
         "\n",
-        "Polynomial ReadPoly();\n",
-        "void Attach(int c, int e, Polynomial *pRear);\n",
-        "Polynomial Add(Polynomial P1, Polynomial P2);\n",
-        "Polynomial Mult(Polynomial P1, Polynomial P2);\n",
-        "void PrintPoly(Polynomial P);\n",
-        "\n",
-        "\n",
-        "int main()\n",
-        "{\n",
-        "    Polynomial P1, P2, PP, PS;\n",
-        "    P1 = ReadPoly();\n",
-        "    P2 = ReadPoly();\n",
-        "    PP = Mult(P1, P2);\n",
-        "    PrintPoly(PP);\n",
-        "    PS = Add(P1, P2);\n",
-        "    PrintPoly(PS);\n",
-        "}\n",
-        "\n",
-        "Polynomial ReadPoly(){\n",
-        "    Polynomial P,Rear,t;\n",
-        "    int c,e,N;\n",
-        "    scanf(\"%d\", &N);\n",
-        "    \n",
-        "    P = (Polynomial)malloc(sizeof(struct PolyNode));\n",
-        "    P->link = NULL;\n",
-        "    Rear = P;\n",
-        "    \n",
-        "    while(N--){\n",
-        "        scanf(\"%d %d\", &c, &e);\n",
-        "        Attach(c,e,&Rear);\n",
-        "    }\n",
-        "    t = P; P = P->link; free(t);  // 去掉头结点\n",
-        "    return P;\n",
-        "}\n",
-        "\n",
         "void Attach(int c, int e, Polynomial *pRear){\n",
         "    Polynomial P;\n",
         "    P = (Polynomial)malloc(sizeof(struct PolyNode));\n",
@@ -453,6 +404,26 @@
         "    *pRear = P;\n",
         "}\n",
         "\n",
+        "Polynomial ReadPoly(){\n",
+        "    Polynomial P,Rear,t;\n",
+        "    int c,e,N;\n",
+        "    \n",
+        "    \n",
+        "    P = (Polynomial)malloc(sizeof(struct PolyNode));\n",
+        "    P->link = NULL;\n",
+        "    Rear = P;\n",
+        "    \n",
+        "    scanf(\"%d\", &N);\n",
+        "    \n",
+        "    while(N--){\n",
+        "        scanf(\"%d %d\", &c, &e);\n",
+        "        Attach(c,e,&Rear);\n",
+        "    }\n",
+        "    t = P; P = P->link; free(t);  // 去掉头结点\n",
+        "    return P;\n",
+        "}\n",
+        "\n",
+        "\n",
         "Polynomial Add(Polynomial P1, Polynomial P2){\n",
         "    Polynomial t1, t2, P, Rear,t;\n",
         "    t1 = P1; t2 = P2;\n",
@@ -462,25 +433,31 @@
         "    \n",
         "    while(t1 && t2){\n",
         "        if(t1->expon == t2->expon){\n",
-        "            Attach(t1->coef+t2->coef, t1->expon, &Rear);\n",
-        "            t1->link = t1;\n",
-        "            t2->link = t2;\n",
+        "            if(t1->coef+t2->coef){\n",
+        "              Attach(t1->coef+t2->coef, t1->expon, &Rear);\n",
+        "            }\n",
+        "              t1 = t1->link;\n",
+        "              t2 = t2->link;\n",
+        "            \n",
         "        }\n",
         "        else if(t1->expon > t2->expon){\n",
         "           Attach(t1->coef, t1->expon, &Rear);\n",
-        "           t1->link = t1;\n",
+        "           t1 = t1->link;\n",
         "        }\n",
         "        else{\n",
         "            Attach(t2->coef, t2->expon, &Rear);\n",
-        "            t2->link = t2;\n",
+        "            t2 = t2->link;\n",
         "        }\n",
         "    }\n",
         "    while(t1){\n",
-        "        Rear->link = t1;\n",
+        "        Attach(t1->coef, t1->expon, &Rear);\n",
+        "        t1 = t1->link;\n",
         "    }\n",
         "    while(t2){\n",
-        "        Rear->link = t2;\n",
+        "        Attach(t2->coef, t2->expon, &Rear);\n",
+        "        t2 = t2->link;\n",
         "    }\n",
+        "    Rear->link = NULL;\n",
         "    t = P; P = P->link; free(t);  // 去掉头结点\n",
         "    return P;\n",
         "}\n",
@@ -488,7 +465,7 @@
         "Polynomial Mult(Polynomial P1, Polynomial P2){\n",
         "    Polynomial P, Rear, t1, t2, t;\n",
         "    int c,e;\n",
-        "    if(!P1||!P2) return NULL;\n",
+        "    if(!P1||!P2){return NULL;}\n",
         "    t1 = P1; t2 = P2;\n",
         "    P = (Polynomial)malloc(sizeof(struct PolyNode));\n",
         "    P->link = NULL;\n",
@@ -503,7 +480,7 @@
         "        Rear=P;\n",
         "        while(t2){\n",
         "            e = t1->expon + t2->expon;\n",
-        "            c = t1->coef*t2->coef;\n",
+        "            c = t1->coef * t2->coef;\n",
         "            while(Rear->link && Rear->link->expon>e){\n",
         "                Rear = Rear->link;\n",
         "            }\n",
@@ -549,10 +526,23 @@
         "        P = P->link;\n",
         "    }\n",
         "    printf(\"\\n\");\n",
+        "}\n",
+        "\n",
+        "\n",
+        "int main()\n",
+        "{\n",
+        "    Polynomial P1, P2, PP, PS;\n",
+        "    P1 = ReadPoly();\n",
+        "    P2 = ReadPoly();\n",
+        "    PP = Mult(P1, P2);\n",
+        "    PrintPoly(PP);\n",
+        "    PS = Add(P1, P2);\n",
+        "    PrintPoly(PS);\n",
+        "    return 0;\n",
         "}"
       ],
       "metadata": {
-        "id": "sHpjAqG2Bs86"
+        "id": "u41N54h8Ibh_"
       },
       "execution_count": null,
       "outputs": []
